--- a/backend-dev/.gitignore
+++ b/backend-dev/.gitignore
@@ -43,3 +43,7 @@ nb-configuration.xml
 /.quarkus/cli/plugins/
 # TLS Certificates
 .certs/
+
+# Keys
+src/main/resources/publicKey.pem
+src/main/resources/privateKey.pem
